adjusting spacing for fixed height header

--- a/assets/stylus/components/site.styl
+++ b/assets/stylus/components/site.styl
@@ -6,9 +6,11 @@
  * 3. Use `%` instead of `vh` since `vh` is buggy in older mobile Safari.
  */
 .Site
-  // display flex
-  // flex-direction column
-  // height 100% // * 1, 3 *
+  position relative
+  top $navbar-height
+  display flex
+  flex-direction column
+  height 100% // * 1, 3 *
 
 .Site-content
   flex 1 0 auto // * 2 *
@@ -16,6 +18,8 @@
   // padding-top 4.7em
   width 100%
   animation reveal .6s .2s ease both
+  top $navbar-height
+  left 0
   
   // @media $break-xs
   //   padding-top 5.9em
@@ -39,3 +43,5 @@
 
 .Site-cart 
   background darken(rgba(255,255,255,1),5%)
+  
+  
